# dteam_djangopractical_test

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cvproject/: cvinstance_fixtures.json
cvproject/cvproject/: celery.py  settings.py  urls.py
cvproject/main/: admin.py  api_views.py  context_processors.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  utils.py  views.py
cvproject/main/migrations/: 0001_initial.py  0002_requestlog_alter_cvinstance_contacts_and_more.py
cvproject/main/templates/main/: cvinstance_detail.html  cvinstance_list.html  request_log_list.html  settings.html
