[project]
name = "dteam-dj-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex_Lk"}
]
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "django (==5.1.7)",
    "flake8 (>=7.1.2,<8.0.0)",
    "weasyprint (>=65.0,<66.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "drf-spectacular (>=0.28.0,<0.29.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
